add multi-language to the site

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -19,21 +19,21 @@ ar:
   btn_services: "خدماتنا"
   section_about:
     about_us: "معلومات عنا"
-    p: "مساعدة الشركات على إنشاء تجارب عملاء جديدة وتحسين الكفاءات التشغيلية وضمان تسليم تكنولوجيا المعلومات"
+    p: " تقوم مؤسستنا بمساعدة الشركات على إنشاء تجارب عملاء جديدة وتحسين الانظمة التشغيلية وضمان تسليم تكنولوجيا المعلومات"
     introduction:
-      p: "نكست شالنج هي شركة تقوم بتطوير هندسة البرمجيات التي تحتوي على الأجزاء الرئيسية"
-      front_title: "تطوير الواجهة الأمامية"
-      front_description: "تطوير الويب الأمامي هو ممارسة لتحويل البيانات إلى واجهة رسومية ، من خلال استخدام HTML و CSS و JavaScript ، بحيث يمكن للمستخدمين عرض تلك البيانات والتفاعل معها."
-      back_title: "تطوير النهاية الخلفية"
-      back_description: "التطوير الخلفي هو المهارة التي تعمل على تشغيل الويب. تتعامل لغات تطوير الواجهة الخلفية مع وظائف ما وراء الكواليس لتطبيقات الويب. إنه رمز يربط الويب بقاعدة بيانات ، ويدير اتصالات المستخدم ، ويقوي تطبيق الويب نفسه."
-      devops_title: "DevOps"
-      devops_description: "DevOps عبارة عن مجموعة من الممارسات التي تجمع بين تطوير البرامج وعمليات تكنولوجيا المعلومات والتي تهدف إلى تقصير دورة حياة تطوير الأنظمة وتوفير التسليم المستمر بجودة عالية للبرامج."
+      p: "نكست شالنج هي شركة تقوم بتطوير هندسة البرمجيات التي تحتوي على الأجزاء الرئيسية التالية"
+      front_title: "تطوير واجهة المستخدم"
+      front_description: "تطوير واجهة المستخدم هو ممارسة لتحويل البيانات إلى واجهة رسومية ، من خلال استخدام HTML و CSS و JavaScript ، بحيث يمكن للمستخدمين عرض تلك البيانات والتفاعل معها."
+      back_title: "تطوير خوارزمية الخادم"
+      back_description: "تطوير خوارزمية الخادم هو المهارة التي تعمل على تشغيل الويب. تتعامل لغات البرمجة لتطوير النهاية الخلفية مع وظائف ما وراء الكواليس لتطبيقات الويب. إنه خوارزمية تربط الويب بقاعدة البيانات ، ويدير اتصالات المستخدم ، ويقوي تطبيق الويب نفسه."
+      devops_title: "الديفوبز"
+      devops_description: " الديفوبز عبارة عن مجموعة من الممارسات التي تجمع بين تطوير البرامج وعمليات تكنولوجيا المعلومات والتي تهدف إلى تقصير دورة حياة تطوير الأنظمة وتوفير التسليم المستمر بجودة عالية للبرامج."
     experience: 
       h4: "الخبرة"
-      p: "يتمتع فريقنا بخبرة سنوات عديدة ، وقد تم تنفيذ العديد من المشاريع بما في ذلك تطوير تطبيقات الويب وإدارة شبكات الكمبيوتر"
+      p: "يتمتع فريقنا بخبرة سنوات عديدة ، وقد تم تنفيذ العديد من المشاريع بما في ذلك تطوير تطبيقات الويب و تطبيقات الهواتف الذكية."
     principle:
       h4: "المبدأ"
-      p: "مبدأنا كمهندسين هو إعلامك وتقديمك وإرشادك في الحوسبة أو حتى تحسين أنظمتك"
+      p: "مبدأنا كمهندسين هو إعلامك وإرشادك وتوفير كل ماتحتاج لتحسين أنظمتك الرقمية."
   section_services:
     services: "خدماتنا"
     p: "مساعدة الشركات على تسريع رحلتهم لتصبح مؤسسات رقمية"
@@ -68,11 +68,11 @@ ar:
       c:
         h3: "طوني هسيه"
         h4: "الرئيس التنفيذي لشركة زابوس"
-        p: "توقف عن مطاردة المال وابدأ في مطاردة العاطفة"
+        p: "توقف عن مطاردة المال وابدأ في مطاردة الشغف"
       d:
         h3: "جاك ما"
         h4: "المؤسس المشارك والرئيس التنفيذي السابق لمجموعة علي بابا"
-        p: "بغض النظر عن مدى صعوبة المطاردة ، يجب أن يكون لديك دائمًا الحلم الذي رأيته في اليوم الأول. سيبقيك متحمسًا وينقذك (من أي أفكار ضعيفة)"
+        p: "بغض النظر عن مدى صعوبة المطاردة ، يجب أن يكون لديك دائمًا الحلم الذي رأيته في اليوم الأول. سيبقيك متحمسًا وينقذك من أي أفكار ضعيفة"
       e:
         h3: "إيلون ماسك"
         h4: "مؤسس ورئيس تنفيذي ، مصمم رئيسي لـسبيس اكس"
@@ -96,8 +96,8 @@ ar:
     menu: 
       home: "الصفحة الرئيسية"
       about_us: "معلومات عنا"
-      services: "خدمات"
-      portfolio: "انجازات"
+      services: "الخدمات"
+      portfolio: "الانجازات"
     contact:
       h4: "اتصل بنا"
       address:
@@ -105,9 +105,9 @@ ar:
         p2: "قطعة رقم 217 سطيف"
         p3: "الجزائر"
       phone: "الهاتف"
-      email: "بريد الالكتروني"
+      email: "البريد الالكتروني"
       activity: "النشاط"
-      strong: "مكتب الدراسات والإستشارة في الإعلام الألي كونسولتينج"
+      strong: "مكتب الدراسات والإستشارة في الإعلام الألي (كونسولتينج)"
   copyright:
     copyright: "حقوق النشر"
     strong: "م.ش.و.ذ.م.م نـكـسـت شالنج"
